--- a/index/style.css
+++ b/index/style.css
@@ -759,16 +759,25 @@ body {
     appearance: none;
 }
 
-.player .volume-controls input::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 16px;
-    height: 16px;
-    background: var(--text-primary);
-    border-radius: 50%;
-    cursor: pointer;
+/* Исправленные стили для ползунка громкости */
+.player .volume-controls input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: var(--text-primary);
+  border-radius: 50%;
+  cursor: pointer;
 }
-
+.player .volume-controls input[type=range]::-moz-range-thumb {
+  -moz-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: var(--text-primary);
+  border-radius: 50%;
+  cursor: pointer;
+}
 
 /* Стили для кнопки "Избранное" в плеере */
 .player #favoritePlayerBtn {
